--- a/css/base.css
+++ b/css/base.css
@@ -71,7 +71,7 @@ body, .wrapper {
 }
 
 /*#circle-flowers > div {*/
-    /*-webkit-transform: scale(0);*/
+/*-webkit-transform: scale(0);*/
 /*}*/
 
 .font-it,
@@ -87,28 +87,8 @@ body, .wrapper {
 }
 
 .hide {
-    display: none;
+    opacity: 0;
 }
-
-/*div.bloom {*/
-    /*opacity: 1;*/
-    /*animation: bloom .5s linear;*/
-    /*-webkit-animation: bloom .5s linear;*/
-/*}*/
-
-/*@keyframes bloom {*/
-    /*from {*/
-        /*transform: rotateZ(30deg);*/
-    /*}*/
-
-/*}*/
-
-/*@-webkit-keyframes bloom {*/
-    /*from {*/
-        /*-webkit-transform: rotateZ(30deg);*/
-    /*}*/
-
-/*}*/
 
 #timing-being-together {
     position: absolute;
@@ -176,6 +156,7 @@ body, .wrapper {
         transform: rotateY(90deg);
     }
 }
+
 @-webkit-keyframes flip-0-90 {
     from {
         -webkit-transform: rotateY(0deg);
@@ -539,63 +520,30 @@ ul#album-ul.photo-in {
     -webkit-animation: fadeIn 0.5s linear;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
 #items {
-    display: none;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: -1;
+}
+
+#items > div {
+    opacity: 0;
 }
 
 .kiss #items {
-    display: block;
-    animation: fadeIn 0.5s ease-in 0.5s;
-    -webkit-animation: fadeIn 0.5s ease-in 0.5s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+    z-index: 2;
 }
 
-@keyframes fadeSlideIn {
-    from {
-        opacity: 0;
-        top: -20px;
-    }
-    to {
-        opacity: 1;
-        top: 0;
-    }
-}
-
-@-webkit-keyframes fadeSlideIn {
-    from {
-        opacity: 0;
-        top: -30px;
-    }
-    to {
-        opacity: 1;
-        top: 0;
-    }
-}
+/*.kiss #items {*/
+/*display: block;*/
+/*animation: fadeIn 0.5s ease-in 0.5s;*/
+/*-webkit-animation: fadeIn 0.5s ease-in 0.5s;*/
+/*-webkit-animation-fill-mode: both;*/
+/*animation-fill-mode: both;*/
+/*}*/
 
 #menu {
     width: 100%;
@@ -607,41 +555,39 @@ ul#album-ul.photo-in {
     position: absolute;
 }
 
-#menu #bubble {
-    display: none;
-}
+/*#menu #bubble {*/
+/*opacity: 0;*/
+/*}*/
 
 #menu #bubble canvas {
     position: absolute;
     width: 10%;
     z-index: 2;
-    animation-fill-mode: both !important;
-    -webkit-animation-fill-mode: both !important;
     margin-top: -8.5rem;
     margin-left: -5.1rem;
 }
 
-#menu.kiss #bubble {
-    display: block;
-}
+/*#menu.kiss #bubble {*/
+/*opacity: 1;*/
+/*}*/
 
-@keyframes bubbleIn {
-    from {
-        transform: scale(0);
-    }
-    to {
-        transform: scale(1);
-    }
-}
+/*@keyframes bubbleIn {*/
+/*from {*/
+/*transform: scale(0);*/
+/*}*/
+/*to {*/
+/*transform: scale(1);*/
+/*}*/
+/*}*/
 
-@-webkit-keyframes bubbleIn {
-    from {
-        -webkit-transform: scale(0);
-    }
-    to {
-        -webkit-transform: scale(1);
-    }
-}
+/*@-webkit-keyframes bubbleIn {*/
+/*from {*/
+/*-webkit-transform: scale(0);*/
+/*}*/
+/*to {*/
+/*-webkit-transform: scale(1);*/
+/*}*/
+/*}*/
 
 #items > div {
     width: 150px;
@@ -659,12 +605,16 @@ ul#album-ul.photo-in {
     transform: rotateZ(-10deg) translateZ(0);
 }
 
+#items > div:nth-child(2) {
+    transform: rotateZ(5deg) translateZ(0);
+}
+
 #items > div:nth-child(3) {
-    transform: rotateZ(-5deg) translateZ(0);
+    transform: rotateZ(5deg) translateZ(0);
 }
 
 #items > div:nth-child(4) {
-    transform: rotateZ(15deg) translateZ(0);
+    transform: rotateZ(-15deg) translateZ(0);
 }
 
 #items > div:nth-child(even) {
