--- a/css/base.css
+++ b/css/base.css
@@ -481,17 +481,17 @@ ul#album-ul.photo-in {
     }
 }
 
-@keyframes zoomIn {
-    to {
-        transform: scale(1.3);
-    }
-}
+/*@keyframes zoomIn {*/
+    /*to {*/
+        /*transform: scale(1.3);*/
+    /*}*/
+/*}*/
 
-@-webkit-keyframes zoomIn {
-    to {
-        -webkit-transform: scale(1.3);
-    }
-}
+/*@-webkit-keyframes zoomIn {*/
+    /*to {*/
+        /*-webkit-transform: scale(1.3);*/
+    /*}*/
+/*}*/
 
 #cover {
     position: absolute;
