--- a/css/base.css
+++ b/css/base.css
@@ -189,6 +189,18 @@ body, .wrapper {
 
 /* album animation */
 
+.wrapper .album{
+    text-align: center;
+}
+
+.wrapper .album > img{
+    width: 90%;
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: rotateZ(10deg);
+    box-shadow: 0 0 50px #808080;
+}
 .wrapper .album ul {
     list-style: none;
     position: relative;
