--- a/css/base.css
+++ b/css/base.css
@@ -46,6 +46,7 @@ body, .wrapper {
 
 .wrapper {
     perspective: 500px;
+    -webkit-perspective: 500px;
 }
 
 .wrapper, .wrapper > div {
@@ -145,6 +146,7 @@ body, .wrapper {
 
 .wrapper .album{
     text-align: center;
+    overflow: hidden;
 }
 
 .wrapper .album > img{
