--- a/css/base.css
+++ b/css/base.css
@@ -9,7 +9,10 @@ html, body {
     overflow: hidden;
 }
 
-body, .wrapper {
+body
+/*, .wrapper*/
+{
+    text-align: center;
     background-color: #ffe;
 }
 
@@ -17,6 +20,9 @@ body > .container {
     width: 100%;
     height: 100%;
     max-width: 800px;
+    position: relative;
+    display: inline-block;
+    text-align: left;
 }
 
 .loading {
