--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,8 @@ body
 body > .container {
     width: 100%;
     height: 100%;
-    max-width: 800px;
+    max-width: 500px;
+    max-height: 800px;
     position: relative;
     display: inline-block;
     text-align: left;
